--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.probuilder": "5.2.2",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.ugui": "1.0.0",
